<resources>
    <string name="app_name">FFTT01</string>
    <string name="db_value">%1$d\ndB</string>
    <string name="percent_value">%1$d\n%%</string>
    <string name="ms_value">%1$d\nms</string>
    <string name="label_100hz">100\nHz</string>
    <string name="label_300hz">300\nHz</string>
    <string name="label_1khz">1k\nHz</string>
    <string name="label_3khz">3k\nHz</string>
    <string name="label_8khz">8k\nHz</string>
    <string name="label_filter_percent">Filter\n%%</string>
    <string name="label_rise_time">Rise\nTime</string>
    <string name="label_fall_time">Fall\nTime</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_esc">ESC</string>
    <string name="btn_latency">Latency</string>
    <string name="btn_gallery">GALLERY</string>
    <string name="btn_quit">QUIT</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_wave">Wavelet</string>
    <string name="btn_filter">FILTER</string>
    <string name="btn_eq">EQ</string>
    <string name="sweep_off">SWEEP\nOFF</string>
    <string name="sweep_on">SWEEP\nON</string>
    <string name="color_prefix">Color:%1$s</string>
    <string name="fft_size_prefix">Size:\n%1$d</string>
    <string name="fft_step_prefix">Step:\n%1$d</string>
    <string name="label_0db">0\ndB</string>
    <string name="label_0pct">0\n%%</string>
    <string name="label_0ms">0\nms</string>
    <string name="title_listening">Listening</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_analysis"></string>
    <string name="title_wavelet">Wavelet Analysis</string>
    <string name="label_blur">Blur:%1$d</string>
    <string name="btn_view_toggle">Toggle View</string>
    <string name="latency_measuring">Measuring&#8230;</string>
    <string name="latency_result">Result: %1$.2f ms</string>
    <string name="latency_error">Result: Error</string>
    <string name="latency_instructions">Instructions:\n1. Increase volume.\n2. Place mic near speaker.\n3. Press Start.\nA chirp will play and be recorded to measure round-trip latency.</string>
    <string name="btn_start_measurement">START MEASUREMENT (CHIRP)</string>
    <string name="title_latency">LATENCY MEASUREMENT</string>
    <string name="btn_back">BACK</string>
    <string name="btn_listen">LISTEN</string>
    <string name="label_fam">FAM</string>
    <string name="label_bnd">BND</string>
    <string name="label_lvl">LVL</string>
    <string name="label_ord">ORD</string>
    <string name="label_fs">FS</string>
    <string name="label_thr">THR</string>
    <string name="label_color">COLOR</string>
    <string name="label_soft">SOFT</string>
    <string name="label_wpt">WPT</string>
    <string name="label_log">LOG</string>
    <string name="label_lnorm">L-NORM</string>
    <string name="label_recon">RECON</string>
    <string name="label_cwt">CWT</string>
    <string name="latency_display_prefix">Latency %1$dms</string>
    <string name="fft_size_value">%1$d</string>
    <string name="fft_step_value">%1$d</string>
    <string name="khz_value">%1$d\nkHz</string>
    <string name="hz_value">%1$d\nHz</string>
    <string name="label_color_simple">Color</string>
    <string name="label_mic_simple">Mic</string>
    <string name="label_size_simple">Size</string>
    <string name="label_step_simple">Step</string>
    <string name="label_blur_simple">Blur</string>
</resources>
